objects/DocumentAnnotation__c.object
<CustomObject>
    <description>The annotations for a document. The annotations are saved with reference to the user who created the annotation.</description>
    <fields>
        <fullName>AnnotationData__c</fullName>
        <description>The JSON containing annotation data for a particular layer of annotation</description>
        <inlineHelpText>The JSON containing annotation data for a particular layer of annotation</inlineHelpText>
        <label>Annotation Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <description>The parent document for which annotation is created</description>
        <inlineHelpText>The parent document for which annotation is created</inlineHelpText>
        <label>Attachment</label>
        <referenceTo>Attachment__c</referenceTo>
        <relationshipLabel>Document Annotations</relationshipLabel>
        <relationshipName>DocumentAnnotations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LayerRecordId__c</fullName>
        <description>Unique Identifier from PrizmDoc to identify the annotation</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Identifier from PrizmDoc to identify the annotation</inlineHelpText>
        <label>Layer Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who created the annotation for a particular layer</description>
        <inlineHelpText>The user who created the annotation for a particular layer</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocumentAnnotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username for the User field on the object. This is required to show the username to the end user who do not have access to the user records, but do have access to Document Annotation object.</description>
        <formula>User__r.FirstName + &apos; &apos; +  User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Username for the User field on the object. This is required to show the username to the end user who do not have access to the user records, but do have access to Document Annotation object.</inlineHelpText>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Document Annotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AnnotationData__c</columns>
        <columns>Attachment__c</columns>
        <columns>LayerRecordId__c</columns>
        <columns>User__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANN-{000000000}</displayFormat>
        <label>Document Annotation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Annotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>